--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,13 +50,17 @@ tag-setting: &tag-setting
   run:
     name: Release Tag
     command: |
-      # version.rbが手動修正されている場合
-      NEW_TAG=v$(grep -e V lib/palette/elastic_search/version.rb | tr -d 'VERSION= "')
-      # 環境変数として設定する必要あり
-      git config user.name $GIT_USER_NAME
-      git config user.email $GIT_USER_EMAIL
-      git tag $NEW_TAG
-      git push origin $NEW_TAG
+      commitmessage=$(git log --pretty=%B -n 1)
+
+      if [[ $commitmessage = *"[change_version]"* ]]; then
+        echo "tag-release"
+      else
+        echo "change-version-file"
+        git config user.name $GIT_USER_NAME
+        git config user.email $GIT_USER_EMAIL
+        git commit --allow-empty -m "[change_version]"
+        git push origin feature/auto_version_up
+      fi
 
 setting-build: &setting-build
   steps:
@@ -125,4 +129,4 @@ workflows:
             - test-rspec
           filters:
             branches:
-              only: master
+              only: feature/auto_version_up
